// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`date (isCI = false) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7mmm[27m<dim>/</fg><dim>dd</bold><dim>/</fg><dim>yyyy</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  Pick a date
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > defaultValue used when empty submit 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m12[27m<dim>/</fg>25<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>12/25/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > renders initial value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m01[27m<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>01/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m01[27m<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>01/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m06[27m<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>06/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > supports MDY format 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m01[27m<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>01/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = false) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  Pick a date
[7m01[27m<dim>/</fg>15<dim>/</fg>2025

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
  <dim>01/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > can cancel 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7mmm[27m<dim>/</fg><dim>dd</bold><dim>/</fg><dim>yyyy</bold>
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<red>■</fg>  Pick a date
<dim>│</fg>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > defaultValue used when empty submit 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m12[27m<dim>/</fg>25<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>12/25/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > renders initial value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m01[27m<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>01/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > renders message 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m01[27m<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>01/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > renders submitted value 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m06[27m<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>06/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > supports MDY format 1`] = `
[
  "<cursor.hide>",
  "<dim>│</fg>
<cyan>◆</fg>  Pick a date
<cyan>│</fg>  [7m01[27m<dim>/</fg>15<dim>/</fg>2025
<cyan>└</fg>
",
  "<cursor.backward count=999><cursor.up count=4>",
  "<cursor.down count=1>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
<dim>│</fg>  <dim>01/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;

exports[`date (isCI = true) > withGuide: false removes guide 1`] = `
[
  "<cursor.hide>",
  "<cyan>◆</fg>  Pick a date
[7m01[27m<dim>/</fg>15<dim>/</fg>2025

",
  "<cursor.backward count=999><cursor.up count=3>",
  "<erase.down>",
  "<green>◇</fg>  Pick a date
  <dim>01/15/2025</bold>",
  "
",
  "<cursor.show>",
]
`;
